public/src/css/partials/chat.css
#spChat {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    z-index: 3000;
}

.sp-chat-header {
    border-bottom: 1px solid silver;
    background: white;
    height: 60px;
    text-align: center;
    position: absolute;
    width: 100%;
    z-index: 1;
}

.sp-chat-header:before {
    content: ' ';
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}

.sp-chat-header img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.sp-chat-header span {
    font-weight: bold;
    display: inline-block;
    vertical-align: middle;
    padding-left: 10px;
    font-size: 16px;
}

.sp-chat-header .sp-chat-control {
    position: absolute;
    font-size: 2em;
    color: #4683ea;
    top: 7px;
}

.sp-chat-header .sp-chat-control.left {
     left: 15px;
}

.sp-chat-header .sp-chat-control.right {
    right: 15px;
}

.sp-chat-input {
    position: absolute;
    width: 100%;
    bottom: 0;
    padding: 10px;
    border-top: 1px solid silver;
    background-color: rgb(238, 238, 238);
}

.sp-chat-input textarea {
    resize: none;
    font-size: 14px;
    border-radius: 5px;
    border-color: rgb(210, 210, 210);
    width: 70%;
    float: left;
}

#spChat .sp-chat-send-btn {
    text-align: center;
}

#spChat .sp-chat-send-btn a,
#spChat .sp-chat-send-btn a:hover,
#spChat .sp-chat-send-btn a:focus {
    color: #777;
    font-weight: bold;
    text-decoration: none;
}

#spChat .sp-chat-send-btn a.sp-active {
    color: #4683ea;
}

#spChat .sp-chat-content {
    background-color: white;
    height: 100%;
    padding-bottom: 47px;
}

@media (max-width: 768px) {
    #spChat {
        top: -60px;
    }
}

.sp-messages-content {
    height: 100%;
    background: white;
    overflow: auto;
}

.sp-messages {
    position: relative;
    bottom: -80%;
    right: 0;
    left: 0;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
}

.sp-message {
    font-size: 17px;
    line-height: 1.2;
    margin: 0 10px 3px;
    padding: 6px 16px 9px;
    min-width: 48px;
    min-height: 35px;
    max-width: 60%;
}

.sp-messages-date {
    text-align: center;
    font-weight: 500;
    font-size: 11px;
    line-height: 1;
    margin: 10px 15px;
    color: #8e8e93;
}

.sp-messages-date span {
    font-weight: 400;
}

.sp-message-sent {
    padding-right: 22px;
    -ms-flex-item-align: end;
    -webkit-align-self: flex-end;
    align-self: flex-end;
    background-color: #00d449;
    color: white;
    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>") 49.5% 55.75% 49.5% 43.25%;
}

.sp-message-sent.sp-message-last {
    margin-bottom: 8px;
    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path d='m96 70c-6-2-12-10-12-19v-16l-14 27s8 8 26 8z'/></svg>") 49.5% 55.75% 49.5% 43.25%;
}

.sp-message-received {
    padding-left: 22px;
    -ms-flex-item-align: start;
    -webkit-align-self: flex-start;
    align-self: flex-start;
    background-color: #e5e5ea;
    color: black;
    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>") 49.5% 43.25% 49.5% 55.75%;
}

.sp-message-received.sp-message-last {
    margin-bottom: 8px;
    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path d='m0 70c6-2 12-10 12-19v-16l14 27s-8 8-26 8z'/></svg>") 49.5% 43.25% 49.5% 55.75%;
}

.sp-message.sp-message-pic {
    padding: 0;
}

.sp-message.sp-message-pic img {
    display: block;
    height: auto;
    max-width: 100%;
}

.sp-empty-content {
    margin-top: 20%;
    text-align: center;
}

.sp-empty-content img {
    height: 100px;
    width: 100px;
    border-radius: 50%;
}

.sp-empty-content span {
    font-weight: bold;
}

